# kighmu-vpn

./: .gitignore  Keystore  README.md  SETUP_GITHUB.md  build.gradle  gradlew  gradlew.bat  how ea2e62e --stat  kighmu.keystore  kighmu_crash.txt  patch_hev.py  patch_hev_ratelimit.py  settings.gradle
.github/workflows/: build.yml  build_hev_multi.yml  build_hev_ratelimit.yml  build_hev_tun2socks.yml  build_hysteria.yml  build_tun2socks.yml  build_tun2socks_jni.yml  build_tun2socks_multi.yml  build_xray.yml
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: zifile  zifile2
app/src/main/cpp/: CMakeLists.txt  hev_jni.cpp  kighmu_packet.c  kighmu_tun.c  relay.cpp  socks_relay.cpp
app/src/main/java/chzPsiphonAndV2ray/: ChzPsiphonAndV2ray.java  ChzPsiphonAndV2ray.kt  ChzPsiphonAndV2rayProxy.java  KighmuV2RayCallback.java  ProxyV2RayVPNServiceSupportsSet.kt  V2RayPoint.java  V2RayPoint.kt  (+2 more)
configs/: 14DGUpwi.json  21WqS75S.json  4NnQ7yBu.json  5HqYhTrM.json  6B4P9AuU.json  9PrTjDqj.json  9pAE8JSe.json  9rE0BnoT.json  Ain1pqij.json  FuCHkFZ7.json  Lpg1PnfB.json  R3DgF52V.json  Ujz5yEQ4.json  UmcV12sT.json  VY1vOYl1.json  YdjcUxdl.json  YzwOLBVX.json  aHWmHYLg.json  bfrEGkPi.json  eCy37jH5.json  gC46VRKa.json  h1CUPZ2Z.json  j9MG5bLL.json  lIyckdiE.json  mlgWrCRA.json  qEbEPIGp.json  qg00vsJo.json  sH5arE22.json  tInn9Lwo.json  weUDniKz.json  zBOs16vM.json
scripts/: build_hysteria.sh  build_xray.sh  gen_drawables.sh  generate_keystore.sh
tun2socks_jni/: go.mod  tun2socks.go
(+107 files in other folders)
